# CRISP

./: .gitignore  Makefile  ReadMe.md
julia/: Manifest.toml  Project.toml  README.md
julia/examples/: direct_solver_interface.jl  simple_qpcc.jl
julia/src/: CRISP.jl
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/include/problem_core/: MarbleProblemAdapter.h
src/core/include/solver_core/: SolverInterface.h
src/core/julia/: crisp_julia_bindings.cpp
src/examples/: CMakeLists.txt
src/examples/marble/: README.md  SolveMarbleData.cpp  write_simple_problem.jl
src/examples/pushT/: SolvePushT.cpp  visualize_pushT.py
